fix(QTDI-1393): move to gradle jetbrains plugin (#1034)
* move to gradle jetbrains plugin
* run action in BGT
* bump minor version